--- a/estadisticas-scrollama.html
+++ b/estadisticas-scrollama.html
@@ -42,92 +42,28 @@
                 <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">274 votaciones</span>, de las cuales un <span class="font-w8">37.59%</span> se han votado por unanimidad.</p>
             </div>
             <div class='step' data-step='2'>
-                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai"> ¿Cuantas mociones se han votado por unanimidad?</p>
-
-                <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">274 votaciones</span>, de las cuales un <span class="font-w8">37.59%</span> se han votado por unanimidad.</p>
-            </div>
-            <div class='step' data-step='3'>
-                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai"> ¿Cuantas mociones se han votado por unanimidad?</p>
-
-                <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">274 votaciones</span>, de las cuales un <span class="font-w8">37.59%</span> se han votado por unanimidad.</p>
-            </div>
-            <div class='step' data-step='4'>
-                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai"> ¿Cuantas mociones se han votado por unanimidad?</p>
-
-                <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">274 votaciones</span>, de las cuales un <span class="font-w8">37.59%</span> se han votado por unanimidad.</p>
-            </div>
-        </div>
-    </section>
-<!--
-    <div id="chart-unanimidad"></div>
-    <section id="unanimidad" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
-        <article class="h-100p vertical-am font-0">
-            <div class="texto w-100 w-30--m padding-l-10p--m vertical-am display-ib font-1">
-                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai"> ¿Cuantas mociones se han votado por unanimidad?</p>
-
-                <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">274 votaciones</span>, de las cuales un <span class="font-w8">37.59%</span> se han votado por unanimidad.</p>
-            </div>
-            <div class="estadisticas w-100 w-50--m vertical-am display-ib font-1">
-                <canvas id="unanimidad-chart" width="400" height="400"></canvas>
-            </div>
-        </article>
-    </section>
-    <section id="repeticion" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
-        <article class="maw-70 h-100p vertical-am font-0">
-            <p class="font-1-5 margin-0 margin-y1--m margin-b2--m">Los tripartitos del pleno</p>
-            <div class="texto w-100 w-40--m padding-r-10p--m vertical-am display-ib font-1">
+                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai">Los tripartitos del pleno</p>
                 <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado asiduamente en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
                 <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 11.31%</span></p> <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">10.58%</span>.</p>
             </div>
-            <div class="estadisticas w-100 w-50--m vertical-am display-ib font-1">
-                <canvas id="repeticion-chart" width="400" height="400"></canvas>
-            </div>
-        </article>
-    </section>
-    <section id="mas-mociones" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
-        <article class="maw-70 h-100p vertical-am font-0">
-            <p class="font-1-5 margin-0 margin-y1--m margin-b2--m">¿Quién ha presentado más mociones?</p>
-            <div class="estadisticas w-100 w-50--m vertical-am display-ib font-1">
-                <canvas id="mas-mociones-chart" width="400" height="400"></canvas>
-            </div>
-            <div class="texto w-100 w-40--m padding-l-10p--m vertical-am display-ib font-1">
+            <div class='step' data-step='3'>
+                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai">¿Quién ha presentado más mociones?</p>
                 <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 274 mociones</span>.</p><p> El primer lugar es para el <span class="font-w8">PSOE</span> con 50 mociones presentadas. </p><p> En segundo lugar el <span class="font-w8">PP</span> con <span class="font-w8">47</span></p><p> En tercer lugar <span class="font-w8">C'S</span> con <span class="font-w8">44</span></p><p> En cuarto lugar esta <span class="font-w8">CHA</span> con <span class="font-w8">36</span>.</p><p> Y en quinto lugar esta <span class="font-w8">ZEC</span> con <span class="font-w8">28</span>.</p>
             </div>
-        </article>
-    </section>
-    <section id="abstenido-mociones" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
-        <article class="maw-70 h-100p vertical-am font-0">
-            <p class="font-1-5 margin-0 margin-y1--m margin-b2--m">¿Quién se ha abstenido más?</p>
-            <div class="texto w-100 w-40--m padding-r-10p--m vertical-am display-ib font-1">
+            <div class='step' data-step='4'>
+                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai">¿Quién se ha abstenido más?</p>
                 <p>La abstención la lideran <span class="font-w8">ZEC</span> y <span class="font-w8">CHA.</span></p><p>En tercer lugar esta <span class="font-w8">C'S</span>.</p><p> En cuarto lugar <span class="font-w8">PP</span>.</p><p> Y en quinto lugar el <span class="font-w8">PSOE</span>.</p>
             </div>
-            <div class="estadisticas w-100 w-50--m vertical-am display-ib font-1">
-                <canvas id="abstencion-mociones-chart" width="400" height="400"></canvas>
+            <div class='step' data-step='5'>
+                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai">¿Quién vota más en contra?</p>
+                <p>En primer lugar <span class="font-w8">ZEC</span>, que ha optado por el voto en contra en el 24% de las votaciones.</p><p> En segundo lugar el <span class="font-w8">PP</span> con un 19%.</p> <p>El tercer lugar es para <span class="font-w8">CHA</span> con el 15%.</p><p> En cuarto lugar esta el <span class="font-w8">PSOE</span> con un 11%.</p><p> Y el quinto lugar es para <span class="font-w8">C'S</span> con el 8%.</p>
             </div>
-        </article>
-    </section>
-    <section id="en-contra-mociones" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
-        <article class="maw-70 h-100p vertical-am font-0">
-            <p class="font-1-5 margin-0 margin-y1--m margin-b2--m">¿Quién vota más en contra?</p>
-            <div class="estadisticas w-100 w-50--m vertical-am display-ib font-1">
-                <canvas id="en-contra-mociones-chart" width="400" height="400"></canvas>
-            </div>
-            <div class="texto w-100 w-40--m padding-l-10p--m vertical-am display-ib font-1">
-                <p>En primer lugar <span class="font-w8">ZEC</span>, que ha optado por el voto en contra en el 24% de las votaciones.</p><p> En segundo lugar el <span class="font-w8">PP</span> con un 19%.</p> El tercer lugar es para <span class="font-w8">CHA</span> con el 15%.</p><p> En cuarto lugar esta el <span class="font-w8">PSOE</span> con un 11%.</p><p> Y el quinto lugar es para <span class="font-w8">C'S</span> con el 8%.</p>
-            </div>
-        </article>
-    </section>
-    <section id="a-favor-mociones" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
-        <article class="maw-70 h-100p vertical-am font-0">
-            <p class="font-1-5 margin-0 margin-y1--m margin-b2--m">¿Quién vota más a favor?</p>
-            <div class="texto w-100 w-40--m padding-r-10p--m vertical-am display-ib font-1">
+            <div class='step' data-step='6'>
+                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai">¿Quién vota más a favor?</p>
                 <p>En primer lugar el <span class="font-w8">PSOE</span>, que ha optado por el voto a favor en el 46% de las votaciones.</p><p> En segundo lugar esta <span class="font-w8">C'S</span> con un 45%.</p><p> El tercer lugar es para <span class="font-w8">CHA</span> con el 36%.</p><p> En penúltimo lugar esta el <span class="font-w8">PP</span> con un 35%.</p><p> Y en qiunto lugar <span class="font-w8">ZEC</span> con el 28%.</p>
             </div>
-            <div class="estadisticas w-100 w-50--m vertical-am display-ib font-1">
-                <canvas id="a-favor-mociones-chart" width="400" height="400"></canvas>
-            </div>
-        </article>
-    </section> -->
+        </div>
+    </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
         <div class="maw-60">
@@ -141,54 +77,6 @@
     <script type="text/javascript" src="js/scrollama.min.js"></script>
     <script type="text/javascript" src="js/Chart.min.js"></script>
     <script type="text/javascript" src="js/estadisticas.js"></script>
-    <style type="text/css">
-
-       #scroll {
-        position: relative;
-       }
-
-       .scroll__graphic {
-        position: -webkit-sticky;
-        position: sticky;
-        float: right;
-        top: 30vh;
-        right: 10vw;
-        -webkit-transform: translate3d(0, 0, 0);
-        -moz-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-       }
-
-       .scroll__graphic p {
-        text-align: center;
-        padding: 1rem;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -moz-transform: translate(-50%, -50%);
-        -webkit-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        font-size: 8rem;
-        font-weight: 900;
-        color: #666;
-       }
-
-       .scroll__text {
-        position: relative;
-        padding: 0 1rem;
-        max-width: 30rem;
-        width: 33%;
-       }
-
-       .step {
-        margin: 0 auto 2rem auto;
-        height: 100vh;
-       }
-
-       .step p {
-        padding: 1rem;
-        font-size: 1.5rem;
-       }
-    </style>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
