--- a/partidos.html
+++ b/partidos.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-<body class="partido">
+<body>
     <header class="font-0 w-100 zi-10 bgc-white">
         <nav class="padding-0__5-1 nav-grid">
             <a href="http://bislai.co" class="textd-n bislai-color font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
@@ -75,7 +75,12 @@
             <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
         </div>
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.
+
+    <a class="maw-60 display-b" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+
+    <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+
+        licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</span></a></div>
     </footer>
     <script>
     (function(i, s, o, g, r, a, m) {
