--- a/partidos/cha.html
+++ b/partidos/cha.html
@@ -12,39 +12,28 @@
 
 <body class="mih-100">
 
-    <section id='scroll'>
-        <div class='scroll__graphic'>
-            <canvas id="chart"></canvas>
-        </div>
-        <div class='scroll__text'>
-            <div class='step' data-step='1'>
-                <p class="title-estadisticas"> ¿Cuantas mociones se han votado por unanimidad?</p>
-
-                <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">274 votaciones</span>, de las cuales un <span class="font-w8">37.59%</span> se han votado por unanimidad.</p>
+    <header class="font-0 w-100 zi-10 bgc-white">
+        <nav class="padding-0__5-1 nav-grid">
+            <a href="http://bislai.co" class="textd-n bislai-color font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
+        BISLAI
+        </a>
+            <div class="w-100--m maw-70p--l padding-0__5-0">
+                <div class="pos-r">
+                    <form action="http://bislai.co/buscador">
+                        <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                        <button class="btn-search" type="submit">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#2f17a9" />
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
-            <div class='step' data-step='2'>
-                <p class="title-estadisticas">Los tripartitos del pleno</p>
-                <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado asiduamente en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
-                <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 11.31%</span></p> <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">10.58%</span>.</p>
+            <div class="nav-grid-second display-n display-ib--m">
+                <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline bislai-color vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
             </div>
-            <div class='step' data-step='3'>
-                <p class="title-estadisticas">¿Quién ha presentado más mociones?</p>
-                <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 274 mociones</span>.</p><p> El primer lugar es para el <span class="font-w8">PSOE</span> con 50 mociones presentadas. </p><p> En segundo lugar el <span class="font-w8">PP</span> con <span class="font-w8">47</span></p><p> En tercer lugar <span class="font-w8">C'S</span> con <span class="font-w8">44</span></p><p> En cuarto lugar esta <span class="font-w8">CHA</span> con <span class="font-w8">36</span>.</p><p> Y en quinto lugar esta <span class="font-w8">ZEC</span> con <span class="font-w8">28</span>.</p>
-            </div>
-            <div class='step' data-step='4'>
-                <p class="title-estadisticas">¿Quién se ha abstenido más?</p>
-                <p>La abstención la lideran <span class="font-w8">ZEC</span> y <span class="font-w8">CHA.</span></p><p>En tercer lugar esta <span class="font-w8">C'S</span>.</p><p> En cuarto lugar <span class="font-w8">PP</span>.</p><p> Y en quinto lugar el <span class="font-w8">PSOE</span>.</p>
-            </div>
-            <div class='step' data-step='5'>
-                <p class="title-estadisticas">¿Quién vota más en contra?</p>
-                <p>En primer lugar <span class="font-w8">ZEC</span>, que ha optado por el voto en contra en el 24% de las votaciones.</p><p> En segundo lugar el <span class="font-w8">PP</span> con un 19%.</p> <p>El tercer lugar es para <span class="font-w8">CHA</span> con el 15%.</p><p> En cuarto lugar esta el <span class="font-w8">PSOE</span> con un 11%.</p><p> Y el quinto lugar es para <span class="font-w8">C'S</span> con el 8%.</p>
-            </div>
-            <div class='step' data-step='6'>
-                <p class="title-estadisticas">¿Quién vota más a favor?</p>
-                <p>En primer lugar el <span class="font-w8">PSOE</span>, que ha optado por el voto a favor en el 46% de las votaciones.</p><p> En segundo lugar esta <span class="font-w8">C'S</span> con un 45%.</p><p> El tercer lugar es para <span class="font-w8">CHA</span> con el 36%.</p><p> En penúltimo lugar esta el <span class="font-w8">PP</span> con un 35%.</p><p> Y en qiunto lugar <span class="font-w8">ZEC</span> con el 28%.</p>
-            </div>
-        </div>
-    </section>
+        </nav>
+    </header>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
         <div class="maw-60">
@@ -53,7 +42,12 @@
             <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
         </div>
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2016 · 2018</p>
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.
+
+    <a class="maw-60 display-b" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+
+    <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><span class="maw-60 display-b">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+
+        licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</span></a></div>
     </footer>
     <script type="text/javascript" src="../js/scrollama.min.js"></script>
     <script type="text/javascript" src="../js/Chart.min.js"></script>
