--- a/partidos/pp.html
+++ b/partidos/pp.html
@@ -55,18 +55,18 @@
             <canvas id="historico"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico">
+    <section class="partidos-grafico partidos-grafico-pp">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos. Es el partido que menos votos en contra recibe.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="en-contra"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-a-favor">
+    <section class="partidos-grafico grafico-a-favor partidos-grafico-pp">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
             </h2>
@@ -77,7 +77,7 @@
             <canvas id="a-favor"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-abstencion">
+    <section class="partidos-grafico grafico-abstencion partidos-grafico-pp">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
             </h2>
@@ -88,23 +88,23 @@
             <canvas id="abstencion"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-abstencion">
+    <section class="partidos-grafico grafico-abstencion partidos-grafico-pp">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que Ciudadanos ha votado en contra del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el Partido Popular ha votado en contra del resto de partidos.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-en-contra"></canvas>
         </div>
     </section>
-    <section class="partidos-grafico grafico-abstencion">
+    <section class="partidos-grafico grafico-abstencion partidos-grafico-pp">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que Ciudadanos ha votado a favor del resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que el Partido Popular ha votado a favor del resto de partidos.</p>
         </div>
         <div class="partidos-grafico-grafica">
             <canvas id="votando-a-favor"></canvas>
@@ -127,7 +127,7 @@
     </footer>
     <script type="text/javascript" src="../js/Chart.min.js"></script>
     <script type="text/javascript" src="../js/chartjs-plugin-datalabels.min.js"></script>
-    <script type="text/javascript" src="../js/ciudadanos.js"></script>
+    <script type="text/javascript" src="../js/pp.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
